force-app/main/default/objects/Voo__c/Voo__c.object-meta.xml
<CustomObject>
    <description>Informações do voo de um aeroporto a outro</description>
    <label>Voo</label>
    <nameField>
        <displayFormat>VOO-{0000}</displayFormat>
        <label>Registro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Voos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>