force-app/main/default/objects/Voo__c/fields/Aeroporto_de_chegada__c.field-meta.xml
<CustomField>
    <fullName>Aeroporto_de_chegada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Aeroporto de chegada</description>
    <inlineHelpText>É onde o voo ira terminar o seu destino</inlineHelpText>
    <label>Aeroporto de chegada</label>
    <referenceTo>Aeroporto__c</referenceTo>
    <relationshipLabel>Voos (Aeroporto de chegada)</relationshipLabel>
    <relationshipName>Voos1</relationshipName>
    <type>Lookup</type>
</CustomField>