force-app/main/default/objects/Voo__c/fields/Aeroporto_de_partida__c.field-meta.xml
<CustomField>
    <fullName>Aeroporto_de_partida__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Aeroporto de partida</description>
    <inlineHelpText>Ponto inicial, de onde o voo ira partir</inlineHelpText>
    <label>Aeroporto de partida</label>
    <referenceTo>Aeroporto__c</referenceTo>
    <relationshipLabel>Voos</relationshipLabel>
    <relationshipName>Voos</relationshipName>
    <type>Lookup</type>
</CustomField>