force-app/main/default/objects/Voo__c/fields/distancia__c.field-meta.xml
<CustomField>
    <fullName>distancia__c</fullName>
    <description>Distancia de voo</description>
    <inlineHelpText>Distancia entre o aeroporto de partida e o aeroporto de chegada</inlineHelpText>
    <label>Distancia</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>